TAJO-1410: TPC-DS TestCase